# textminer

./: Cargo.toml  LICENSE
src/: body_text_extractor.rs  eof.rs  error.rs  main.rs  text_extractor.rs  utf8_reader.rs  utf8_writer.rs
src/html/: comment_parser.rs  content_parser.rs  element_parser.rs  entity_parser.rs  html_text_extractor.rs  mod.rs  parser_context.rs  processor.rs
src/util/: json_writer.rs  mod.rs  utf8_writer.rs
