[package]
name = "textminer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures = { version = "0.3.30" }
tokio = { version= "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
axum = "0.7.5"
async-recursion = "1.1.1"
